exports[`test should render a default component 1`] = `
<div
  className="content-container">
  <div
    className="content-container-header" />
  <div
    className="content-container-main">
    <div
      className="content-container-main-normalizer" />
  </div>
</div>
`;

exports[`test should render a header 1`] = `
<div
  className="content-container">
  <div
    className="content-container-header">
    <p>
      Header
    </p>
  </div>
  <div
    className="content-container-main">
    <div
      className="content-container-main-normalizer" />
  </div>
</div>
`;

exports[`test should render as fill 1`] = `
<div
  className="content-container content-container-fill">
  <div
    className="content-container-header" />
  <div
    className="content-container-main">
    <div
      className="content-container-main-normalizer" />
  </div>
</div>
`;

exports[`test should render content 1`] = `
<div
  className="content-container">
  <div
    className="content-container-header" />
  <div
    className="content-container-main">
    <div
      className="content-container-main-normalizer">
      <p>
        test content
      </p>
    </div>
  </div>
</div>
`;
